--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 \usepackage[margin=2.5cm,left=2cm,includefoot]{geometry}
-\usepackage{graphicx}
+\usepackage[pdftex]{graphicx}
 \usepackage{float}
 \usepackage[space]{grffile}
 \usepackage{hyperref}
@@ -1349,7 +1349,7 @@
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
 		
 			\begin{figure}[H]				
-				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/domainModel.jpg}
+				\includegraphics[width=\linewidth, center]{../Diagrams/Domain Model/domainModel.jpg}
 				\caption{ Domain model - Classes related to each domain }
 			\end{figure}
 			\begin{center}
