--- a/Notes/Architectural Patterns or Styles/Architectural Styles or Patterns.tex
+++ b/Notes/Architectural Patterns or Styles/Architectural Styles or Patterns.tex
@@ -11,7 +11,7 @@
 \section{Architectural Patterns}
 
 \subsection{Introduction}
-Often times source code needs to be organised so that clear roles, responsibilities and relationships of different modules of the code can be well defined. Architectural patterns help in making this possible and numerous types will be discussed in this section. Using these patterns, code becomes easier to maintain, manage and visualise. They also make understanding of how each component works in a system easier. They are reusable solutions to a commonly occuring problem in Software Architecture within a given context.
+Often times source code needs to be organised so that clear roles, responsibilities and relationships of different modules of the code can be well defined. Architectural patterns help in making this possible and numerous types will be discussed in this section. Using these patterns, code becomes easier to maintain, manage and visualise. They also make understanding of how each component works in a system easier. They are reusable solutions to a commonly occuring problems within a given context in Software Architecture.
 
 \subsection{Types of Architectural Patterns}
 
@@ -30,73 +30,71 @@ Often times source code needs to be organised so that clear roles, responsibilit
 
 \subsubsection{Model View Controller}
 \begin{itemize}
-\item{Background}
+\item{Overview}
 \newline
-\newline
-In the Model-View-Controller Pattern, an interactive application is divided into three parts: the Model is an object representing the data and activities, the View displays information to the user and the Controller offers a way to change the state of the Model.
+In the Model-View-Controller Pattern, an interactive application is divided into three parts: the Model is an object representing and storing the data and activities, the View displays information to the user and the Controller offers a way to change the state of the Model. To implement this patten for the system, the Python Django Framework will be used.
 
 \item{Motivation}
 \newline
-\newline
-Any form of application that uses a request-and-response logic needs to be decoupled. Separation of responsibilities is useful because functions can work normally when certain subsystems are changed. The Model View Controller makes this a possibility and hence it is chosen for use in this context. 
+Separation of responsibilities is useful because functions can work normally when certain subsystems are changed. The Model View Controller makes this a possibility and hence it is chosen for use in this context. 
 
 \item{Components of the Model View Controller Pattern}
 \begin{enumerate}
 \item{Model}
 \newline
-The Model consists of the Databse that will be used to store all the relevant information used by the system. For this particular system, Django will be used to handle the Databse. For the Android Application, an appropriate API that will implement REST or Representational State Transfer will be used to communicate with the main Model (Database).
+The Django Framework provides a Model functionality that handles the creation and storage of data in a relational databse that will contain essential fields and behaviours of the data stored for the system.
 \newline
 
 \item{View}
-\begin{enumerate}
-\item{Web Application}
-\newline
-For the Web Application, the browser will be the View because it will display the HTML (with or without CSS and JQuery) that the user will be able to use to interact with the application logic. The Controller will send data to the viewer so that the user can see it. In addition, Django provides a way for data to be sent to the View.
-\newline
-\item{Android Application}
-\newline
-For the Android Application, the Android Graphic User Interface, or GUI will be the View and appropriate APIs, such as REST, will be used that will enable this applicaton to manipulate the Model via the Controller.
-\end{enumerate}
 
-\item{Controller}
+Normally, the View would be the HTML page or the Android Graphic User Interface, or GUI that displays data from the relational databse to the user for interaction purposes. However, Django implements the View as a "Python callback function for a particular  URL, because that callback function describes which data is presented" to the user. Thus the View would be both the User Interface and Django's  implementation of the View for the system.
 \newline
-The Django Framework itself will be the Controller as it will provide appropriate functionality for data manipulation.
+\item{Controller}
+
+The Django Framework itself will be the Controller as it will provide appropriate functionality for data manipulation. It will be used along with the REST, or Representational State Transfer API to retrieve data from the Android and the Web Interface.
 
 \end{enumerate}
 \end{itemize}
 
 \subsubsection{Layered Pattern}
 \begin{itemize}
-\item{Background}
-\newline
+\item{Overview}
 \newline
 The Layered Pattern assists in structuring applications that can be decomposed into subtasks. Each subtask provides services to the layer above it and services in that layer are implemented using those from the layer below it.
-\newline
+
 \item{Motivation}
-\newline
 \newline
 A system typically consists of subsystems that have a certain functionality. These functions need to be placed in layers so that their services can be used by other layers and a change in behaviour of one layer does not affect the layers below it. This assists in developing different layers independently. 
 
-\item{Components of the Layered System }
+\item{Components of the Layered Pattern}
 \newline
-This pattern will be used to separate the internal functions within each subsystem.
+This pattern will be used to separate the internal functions within each subsystem and each function will be placed in a layer. It will be used to structure the Model View Controller Pattern described above to provide additional decoupling and structure to the system.
 \newline
 
 \end{itemize}
 
 
-\subsubsection{Concurrency - Master Slave}
+\subsubsection{Master-Slave}
 \begin{itemize}
-\item{Background}
-\newline
+\item{Overview}
 \newline
 The Master-slave Pattern can be described as  a model where one process (Master) has unidirectional control over one or more processes that are known as Slaves. 
 
 \item{Motivation}
 \newline
-\newline
 An interactive application typically consist of multiple users that use it at different rates. These users make requests that usually expect a response to either use the data or edit it in some way and thus is imperative for the application have an ability to collect user information simultaneously.
 
+\item{Components of the Master-Slave Pattern}
+\newline
+This pattern will be used to make the system concurrent, i.e to enable multiple users to use it simultaneously and continuously at different rates.
+\begin{itemize}
+\item{Master} 
+\newline
+The Master will be the server that will respond to each request it receives from the Slave using the system, and will also provide instructions to these Slaves.
+\item{Slaves}
+\newline 
+The Slaves will be the clients connecting to the server and will  send requests concurrently to achieve a certain goal.
+\end{itemize}
 \end{itemize}
 
 \subsection{Patterns Not Considered}
@@ -107,7 +105,7 @@ An interactive application typically consist of multiple users that use it at di
 \item Client Application provides access to humans, or systems (Fritz, 2012)
 \item Requests are typically handled in separate threads on the server.
 \item Inter-process communication causes overhead.
-\item Requests and data have to be transformed because they have different representation in Server and Client, and there is network traffic.
+\item Requests and data have to be transformed because they have different representation in Server and Client.
 \end{itemize}
 
 \subsubsection{Microkernel}
@@ -115,7 +113,7 @@ An interactive application typically consist of multiple users that use it at di
 \item Used for applications that must adapt to changing system requirements.
 \item This pattern provides minimal functionality (Internal Servers) as a building block and customizable components that can be adapted accordingly (External Servers).
 \item It provides an Adapter that provides a single access point (Fritz, 2012)
-\item It has a more complex process management if not provided by architecture (Fritz, 2012)
+\item It offers a more complex process management if not provided by architecture (Fritz, 2012)
 \end{itemize}
 
 \subsubsection{Pipes and Filters}
@@ -139,8 +137,8 @@ An interactive application typically consist of multiple users that use it at di
 \subsubsection{Blackboard Pattern}
 \begin{itemize}
 \item Blackboard repository hosts problem specification and current state of solution (Fritz, 2012)
-\item It is typically used were deterministic solutions are unavailable.
-\item It is not used because it requires synchronization and access control among users which is not required for running applications that are interactive.
+\item It is typically used where deterministic solutions are unavailable.
+\item It is not used because it requires complex synchronization and access control techniques. 
 \end{itemize}
 
 \end{document}
