Final pdf - WIP

--- a/Documentation/ArchitecturalRequirements.tex
+++ b/Documentation/ArchitecturalRequirements.tex
@@ -65,7 +65,7 @@
 	\subsection{Architectural scope}\label{subsec:scope}
 	
 	\begin{figure}[H]
-		\includegraphics[width=\linewidth]{../../Diagrams/Architectural Scope/Architectural scope.jpg}
+		\includegraphics[width=\linewidth]{../Diagrams/Architectural Scope/Architectural scope.jpg}
 		\caption{Architectural Scope - Use case for Architectural Scope (Further refined in use cases)}
 	\end{figure}
 	
@@ -456,7 +456,7 @@ In this section we will discuss the reference architecture and frameworks that w
 			jQuery is a cross-platform JavaScript library designed to simplify client-side scripting. It is the most popular JavaScript library in use today
 	
 	\subsection{Protocols}
-		All protocols listed below were discussed in section \ref{sec: Integration channels}
+		All protocols listed below were discussed in section \ref{subsec:integration}
 			\begin{itemize}
 				\item LDAP (Lightweight Directory Access Protocol)
 				\item HTTPS
